<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/headerBack"
    tools:context="com.halftone.halftone.users.LoginActivity">

    <LinearLayout
        android:id="@+id/headerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="125dp"
            android:fontFamily="cursive"
            android:gravity="center_vertical"
            android:text="@string/halftone_logo_text"
            android:textAlignment="center"
            android:textColor="@color/headerColor"
            android:textSize="60sp"
            android:textStyle="italic" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/headerLayout"
        android:layout_alignParentStart="true">

        <EditText
            android:id="@+id/emailField"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/passwordField"
            android:layout_below="@+id/header"
            android:layout_gravity="center"
            android:layout_marginBottom="25dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/form_field"
            android:fontFamily="casual"
            android:hint="@string/login_email_text"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:padding="20dp"
            android:textColor="@color/headerColor"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/passwordField"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_above="@+id/loginField"
            android:layout_gravity="center"
            android:layout_marginBottom="25dp"
            android:background="@drawable/form_field"
            android:fontFamily="casual"
            android:hint="@string/login_password_text"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="20dp"
            android:textColor="@color/headerColor"
            android:textSize="14sp" />

        <Button
            android:id="@+id/loginField"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_above="@+id/registerField"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginBottom="40dp"
            android:background="@color/textColor"
            android:fontFamily="casual"
            android:text="@string/login_button_text"
            android:textColor="@color/headerBack"
            android:textStyle="bold" />

    </LinearLayout>

    <Button
        android:id="@+id/registerField"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:background="@drawable/custom_register_button"
        android:fontFamily="casual"
        android:text="@string/login_register_text"
        android:textAllCaps="false"
        android:textColor="@color/headerColor"
        android:textStyle="bold" />

</RelativeLayout>